--- a/prepros.config
+++ b/prepros.config
@@ -909,6 +909,13 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "css/main.scss",
+        "config": {
+          "customOutput": "css/main.css"
+        }
+      }
+    ]
   }
 }
