--- a/prepros.config
+++ b/prepros.config
@@ -28,7 +28,8 @@
       "extensions": [
         ".html",
         ".htm",
-        ".php"
+        ".php",
+        ".scss"
       ],
       "ignore": {
         "patterns": [
@@ -206,9 +207,9 @@
         "sourceMap": false
       },
       "dart-sass": {
-        "indentType": "space",
+        "indentType": "tab",
         "allowWildcardImports": false,
-        "indentWidth": 2,
+        "indentWidth": 1,
         "linefeed": "lf",
         "sourceMap": false
       },
@@ -411,6 +412,18 @@
         "sortAttrs": true,
         "removeDimensions": true
       },
+      "tailwindcss": {
+        "rootDir": "",
+        "content": [
+          "**/*.html",
+          "**/*.php",
+          "**/*.js",
+          "!wp-admin",
+          "!wp-includes",
+          "!node_modules",
+          "!Prepros Export"
+        ]
+      },
       "turf": {
         "rootDir": ""
       },
@@ -571,6 +584,10 @@
           {
             "task": "copy",
             "enable": true
+          },
+          {
+            "task": "tailwindcss",
+            "enable": false
           },
           {
             "task": "postcss-import",
