--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "gulp": "^4.0.2",
     "jquery": "^3.6.0",
+    "jquery-touchswipe": "^1.6.19",
+    "mobile-detect": "^1.4.5",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
